--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <h1 class="text-white">House Repair</h1>
                 <h1 class="text-white border-bottom border-5 border-white pb-3">Services</h1>
             </div>
+            <div class="painting-section">
             <div class="row">
                 <div class="col-4 col-md-4 col-lg-4 d-none d-lg-block 1-md-block">
                     <img src="./images/paint-brush.svg" alt="paint brush" class="paint-brush">
@@ -45,8 +46,9 @@
                 </div>
             </div>
         </div>
+        </div>
     </section>
-    <!-- <section class="container text-center py-5">
+    <section class="container text-center py-5"> 
         <h4 class="text-secondary text-uppercase fs-6 ">Our services</h4>
         <h2 class="fs-1  text-black ">How can we help you?</h2>
         <p> We specialize in making routine maintenance and emergency repair experiences worry free.<br> Give us
@@ -66,8 +68,8 @@
             <h5 class="text-danger">Call us now:546-987-087</h5>
             <img src="./images/billionphotos1883011.jpg" class="electric-man">
         </div>
-    </section> -->
-    <!-- <section class="container-fluid best-quality mt-4 bg-light">
+    </section>
+    <section class="container-fluid best-quality mt-4 bg-light">
         <div class="row">
             <div class="col-12 col-md-6 col-lg-6">
                 <div class="good-man">
@@ -79,10 +81,9 @@
                             help maintain,upgrade, and repair properties.</p>
                         <button class="btn-danger">Book Now</button>
                     </div>
-    </section> -->
-    <!-- <h1 class=" fw-bold py-4 text-center">Our Services</h1> -->
-<!-- 
-    <section class="container-fluid  py-5">
+    </section>
+    <h1 class=" fw-bold py-4 text-center">Our Services</h1>
+    <section class="container-fluid py-5">
         <div class="services">
             <div class="row">
                 <div class="col-9 col-md-4 col-lg-4 ">
@@ -107,15 +108,17 @@
                 </div>
             </div>
         </div>
-    </section> -->
-    <!-- <section class="bg-primary">
+    </section>
+     <section class="bg-primary">
         <div class=" container">
             <div class="row">
                 <div class="col-6 col-md-6 col-lg-6">
                     <div>
                     </div>
                     <h4 class="fs-6 fw-lighter text-uppercase text-white">About Us</h4>
+                <span></span>
                     <h2 class="display-5 fw-bolder text-white">plumbing</h2>
+                    <span></span>
                     <h2 class="display-4 fw-bolder text-white">services</h2>
                 </div>
                 <div class="col-6 col-md-6 col-lg-6">
@@ -137,8 +140,8 @@
                         </div>
                 </div>
 
-    </section> -->
-    <!-- <section class="to-do-section">
+    </section>
+     <section class="to-do-section">
         <div class="container  fs-3 text-center py-5 to-do">
             <h4><strong>Get your 'TO-DO' list completed by a professional!</strong></h4>
             <p>We’re on a mission to help build long-lasting brands that shape and <br>define an entire
@@ -151,8 +154,8 @@
             </div>
         </div>
 
-    </section> -->
-    <!-- <section class="foot-section">
+    </section>
+     <section class="foot-section">
         <div class=" bg-dark text-white text-center">
             <p>Sample text. Click to select the text box. Click again or double click to start editing
                 the text.
