--- a/index.html
+++ b/index.html
@@ -132,37 +132,38 @@
             </div>
         </div>
     </section>
-     <section class=" bg-primary">
-        <div class=" container">
+    <section class=" bg-primary">
+        <div class=" container py-5">
             <div class="row">
-                <div class="col-6 col-md-6 col-lg-6">
-                    <div>
-                    </div>
+                <div class="col-12 col-md-6 col-lg-6">
                     <h4 class="fs-6 fw-lighter text-uppercase text-white">About Us</h4>
-                <span></span>
+                     <span></span>
                     <h2 class="display-5 fw-bolder text-white">plumbing</h2>
                     <span></span>
                     <h2 class="display-4 fw-bolder text-white">services</h2>
                 </div>
-                <div class="col-6 col-md-6 col-lg-6">
-                    <div class="row pt-4">
-                        <div class="col-6">
-                            <img src="./images/frg.jpg" alt="plumber" class="img-fluid h-100">
-                        </div>
-                        <div class="col-6">
-                            <img src="./images/rg.jpg" alt="rg" class="img-fluid h-100">
-                        </div>
-                    </div>
+                    <div class="col-12 col-md-6 col-lg-6">
                         <div class="row pt-4">
                             <div class="col-6">
-                                <img src="./images/billionphotos1882993.jpg" alt="billion" class=" img-fluid h-100">
+                                <img src="./images/frg.jpg" alt="plumber" class="img-fluid h-100">
                             </div>
                             <div class="col-6">
-                                <img src="./images/billionphotos1882951.jpg" alt="billion2" class="img-fluid h-100">
+                                <img src="./images/rg.jpg" alt="rg" class="img-fluid h-100">
                             </div>
                         </div>
+                            <div class="row pt-4">
+                                <div class="col-6">
+                                    <img src="./images/billionphotos1882993.jpg" alt="billion" class=" img-fluid h-100">
+                                </div>
+                                <div class="col-6">
+                                    <img src="./images/billionphotos1882951.jpg" alt="billion2" class="img-fluid h-100">
+                                </div>
+                         </div>
+                       </div>
+                    </div>
                 </div>
-
+           </div>
+       </div>
     </section>
      <section class="to-do-section ">
         <div class="container  fs-3 text-center py-5 to-do">
