--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     <h2 class="display-4 fw-bolder text-white">services</h2>
                 </div>
                     <div class="col-12 col-md-6 col-lg-6">
-                        <div class="row pt-4">
+                        <div class="row py-5">
                             <div class="col-6">
                                 <img src="./images/frg.jpg" alt="plumber" class="img-fluid h-100">
                             </div>
