--- a/index.html
+++ b/index.html
@@ -143,20 +143,20 @@
                     <h2 class="display-4 fw-bolder text-white">services</h2>
                 </div>
                     <div class="col-12 col-md-6 col-lg-6">
-                        <div class="row py-5">
-                            <div class="col-6">
-                                <img src="./images/frg.jpg" alt="plumber" class="img-fluid h-100">
+                        <div class="row pt-5">
+                            <div class="col-12 col-md-6 col-lg-6">
+                                <img src="./images/frg.jpg" alt="plumber" class=" image-1 img-fluid h-100">
                             </div>
                             <div class="col-6">
-                                <img src="./images/rg.jpg" alt="rg" class="img-fluid h-100">
+                                <img src="./images/rg.jpg" alt="rg" class="image-2 img-fluid h-100">
                             </div>
                         </div>
                             <div class="row pt-4">
                                 <div class="col-6">
-                                    <img src="./images/billionphotos1882993.jpg" alt="billion" class=" img-fluid h-100">
+                                    <img src="./images/billionphotos1882993.jpg" alt="billion" class="image-3 img-fluid h-100">
                                 </div>
                                 <div class="col-6">
-                                    <img src="./images/billionphotos1882951.jpg" alt="billion2" class="img-fluid h-100">
+                                    <img src="./images/billionphotos1882951.jpg" alt="billion2" class="image-4 img-fluid h-100">
                                 </div>
                          </div>
                        </div>
