--- a/index.html
+++ b/index.html
@@ -47,10 +47,6 @@
                         <h4 class="text-white">Plumbing</h4>
                     </div>
                 </div>
-
-
-
-                
         </div>
     </section>
     <section class="text-center py-5"> 
@@ -142,9 +138,9 @@
                     <span></span>
                     <h2 class="display-4 fw-bolder text-white">services</h2>
                 </div>
-                    <div class="col-12 col-md-6 col-lg-6">
+                    <div class="col-md-6 col-lg-6">
                         <div class="row pt-5">
-                            <div class="col-12 col-md-6 col-lg-6">
+                            <div class="col-6 col-md-6 col-lg-6">
                                 <img src="./images/frg.jpg" alt="plumber" class=" image-1 img-fluid h-100">
                             </div>
                             <div class="col-6">
