--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
                     <span></span>
                     <h2 class="display-4 fw-bolder text-white">services</h2>
                 </div>
-                    <div class="col-md-6 col-lg-6">
-                        <div class="row pt-5">
-                            <div class="col-6 col-md-6 col-lg-6">
+                    <div class="col-12 col-md-6 col-lg-6">
+                        <div class="row">
+                            <div class="col-6 col-md-6 col-lg-6  pt-5">
                                 <img src="./images/frg.jpg" alt="plumber" class=" image-1 img-fluid h-100">
                             </div>
                             <div class="col-6">
