--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 </div>
                     <div class="col-12 col-md-6 col-lg-6">
                         <div class="row">
-                            <div class="col-6 col-md-6 col-lg-6  pt-5">
+                            <div class="col-6 col-md-6 col-lg-6">
                                 <img src="./images/frg.jpg" alt="plumber" class=" image-1 img-fluid h-100">
                             </div>
                             <div class="col-6">
