--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                 <div class="text-center">
                     <a href="website builder software">website builder software</a>
             </nav>
-    </section> -->
+    </section>
     <script src="script\bootstrap.bundle.min.js"></script>
 
 </body>
