--- a/index.html
+++ b/index.html
@@ -141,10 +141,10 @@
                     <div class="col-12 col-md-6 col-lg-6">
                         <div class="row">
                             <div class="col-6 col-md-6 col-lg-6">
-                                <img src="./images/frg.jpg" alt="plumber" class=" image-1 img-fluid h-100">
+                                <img src="./images/frg.jpg" alt="plumber" class="image-1 h-100">
                             </div>
                             <div class="col-6">
-                                <img src="./images/rg.jpg" alt="rg" class="image-2 img-fluid h-100">
+                                <img src="./images/rg.jpg" alt="rg" class="image-2 img-fluid">
                             </div>
                         </div>
                             <div class="row pt-4">
