--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                                 <img src="./images/frg.jpg" alt="plumber" class="image-1 img-fluid h-100">
                             </div>
                             <div class="col-6">
-                                <img src="./images/rg.jpg" alt="rg" class="image-2 img-fluid">
+                                <img src="./images/rg.jpg" alt="rg" class="image-2 img-fluid h-100">
                             </div>
                         </div>
                             <div class="row pt-4">
